--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Analyse your Obsidian graph",
   "main": "main.js",
   "scripts": {
-    "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production",
-    "release": "standard-version"
+    "dev": "node esbuild.config.mjs",
+		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "standard-version"
   },
   "standard-version": {
     "t": ""
@@ -20,8 +20,6 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/node": "^14.17.32",
-    "obsidian": "^0.12.17",
     "rollup": "^2.58.3",
     "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-svelte": "7.1.0",
@@ -29,8 +27,14 @@
     "source-map-js": "^0.6.2",
     "svelte-check": "^1.6.0",
     "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "@types/node": "^22.15.32",
+		"@typescript-eslint/eslint-plugin": "5.29.0",
+		"@typescript-eslint/parser": "5.29.0",
+		"builtin-modules": "3.3.0",
+		"esbuild": "0.17.3",
+		"obsidian": "^1.8.7",
+		"tslib": "2.4.0",
+		"typescript": "4.7.4"
   },
   "dependencies": {
     "@tsconfig/svelte": "^2.0.1",
