--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,18 @@
     "importHelpers": true,
     "isolatedModules": true,
     "strictNullChecks": true,
+    "importsNotUsedAsValues": "remove",
     "lib": [
       "DOM",
       "ES5",
       "ES6",
-      "ES7"
+      "ES7",
+      "ES2019"
     ],
     "types": ["node", "svelte"],
     "paths": {
       "src": ["src/*"]
-    },
+    }
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules/*"]
