--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production",
-    "release": "standard-version"
+    "version": "standard-version"
   },
   "standard-version": {
     "t": ""
@@ -15,22 +15,26 @@
   "author": "SkepticMystic",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.3",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/node": "^14.17.32",
-    "obsidian": "^0.12.17",
-    "rollup": "^2.58.3",
+    "rollup": "^4.44.0",
     "rollup-plugin-ignore": "^1.0.10",
-    "rollup-plugin-svelte": "7.1.0",
+    "rollup-plugin-svelte": "7.2.2",
     "sanitize-html": "^2.5.2",
     "source-map-js": "^0.6.2",
     "svelte-check": "^1.6.0",
     "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "@types/node": "^22.15.32",
+		"@typescript-eslint/eslint-plugin": "5.29.0",
+		"@typescript-eslint/parser": "5.29.0",
+		"builtin-modules": "3.3.0",
+		"esbuild": "0.17.3",
+		"obsidian": "^1.8.7",
+		"tslib": "2.4.0",
+		"typescript": "4.7.4"
   },
   "dependencies": {
     "@tsconfig/svelte": "^2.0.1",
