--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,29 @@
 
   "compilerOptions": {
     "baseUrl": ".",
-    // "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
-    "target": "es6",
+    "target": "ES6",
     "allowJs": true,
     "checkJs": false,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "lib": ["dom", "es5", "scripthost", "es2019"],
+    "isolatedModules": true,
+    "strictNullChecks": true,
+    "importsNotUsedAsValues": "remove",
+    "lib": [
+      "DOM",
+      "ES5",
+      "ES6",
+      "ES7",
+      "ES2019"
+    ],
     "types": ["node", "svelte"],
     "paths": {
       "src": ["src/*"]
     }
   },
-  "include": ["src/**/*", "src/*", "**/*.ts"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules/*"]
 }
