refactor(package.json): migrate from Rollup to esbuild for faster builds and improved developer experience
This commit introduces significant changes to the project's build process by switching from Rollup to esbuild. The primary motivation for this change is to leverage esbuild's superior performance, which will result in faster build times during development and production. This migration also includes updating dependencies and adjusting build scripts to accommodate the new build tool.

Key changes include:

- **Build Script Updates:**
 - `dev` script now uses `node esbuild.config.mjs` for development builds.
 - `build` script now uses `tsc -noEmit -skipLibCheck && node esbuild.config.mjs production` for production builds, ensuring type checking before bundling.

- **Dependency Changes:**
 - Removed Rollup-specific plugins like `@rollup/plugin-commonjs`, `@rollup/plugin-node-resolve`, `@rollup/plugin-json`, `@rollup/plugin-typescript`, and `rollup-plugin-ignore`.
 - Added esbuild-related dependencies: `esbuild`.
 - Introduced React and related dependencies: `react`, `react-dom`, `react-icons`, `react-infinite-scroll-component`.
 - Updated `obsidian` and `obsidian-community-lib` to newer versions.
 - Removed `@tsconfig/svelte` as Svelte is no longer the primary UI framework.

- **Configuration Updates:**
 - `rollup.config.js` has been removed as esbuild handles the bundling.
 - `tsconfig.json` has been updated to include React JSX support and necessary types.

- **Codebase Restructuring:**
 - The UI components have been migrated from Svelte to React. This involves creating new `.tsx` files for components like `AnalysisComponent`, `CoCitations`, `HITS`, `LabelPropagation`, `Louvain`, `TableComponent`, `Checkboxes`, `ScrollSelector`, `SubtypeOptions`, `InfoIcon`, `ExtensionIcon`, `ImgThumbnail`, and `RenderedMarkdown`.
 - `AnalysisView.ts` has been updated to use React for rendering components.
 - `MyGraph.ts` and `Utility.ts` have been refactored to support the new 

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": "@tsconfig/svelte/tsconfig.json",
-
   "compilerOptions": {
     "baseUrl": ".",
     "inlineSources": true,
+    "sourceMap": true,
     "module": "ESNext",
     "target": "ES6",
     "allowJs": true,
@@ -14,6 +13,7 @@
     "isolatedModules": true,
     "strictNullChecks": true,
     "importsNotUsedAsValues": "remove",
+    "jsx": "react-jsx",
     "lib": [
       "DOM",
       "ES5",
@@ -21,11 +21,12 @@
       "ES7",
       "ES2019"
     ],
-    "types": ["node", "svelte"],
+    "types": ["node", "react", "react-dom"],
     "paths": {
       "src": ["src/*"]
-    }
+    },
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "src/sbd.d.ts"],
   "exclude": ["node_modules/*"]
 }
