--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Analyse your Obsidian graph",
   "main": "main.js",
   "scripts": {
-    "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "dev": "node esbuild.config.mjs",
+		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "standard-version"
   },
   "standard-version": {
@@ -18,36 +18,37 @@
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.3",
     "@types/lodash.isequal": "^4.5.5",
+    "@types/node": "^22.15.32",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/react-infinite-scroll-component": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "builtin-modules": "3.3.0",
+    "esbuild": "0.17.3",
+    "obsidian": "1.8.7",
     "rollup": "^4.44.0",
     "rollup-plugin-ignore": "^1.0.10",
-    "rollup-plugin-svelte": "7.2.2",
     "sanitize-html": "^2.5.2",
     "source-map-js": "^0.6.2",
-    "svelte-check": "^1.6.0",
-    "svelte-preprocess": "^4.9.8",
-    "@types/node": "^22.15.32",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "^1.8.7",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+    "tslib": "2.4.0",
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "@tsconfig/svelte": "^2.0.1",
     "graphology": "^0.23.1",
     "graphology-communities-louvain": "^1.5.3",
     "graphology-metrics": "^1.18.2",
     "lodash.isequal": "^4.5.0",
-    "obsidian-community-lib": "1.2.0",
+    "obsidian-community-lib": "2.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "sbd": "^1.0.19",
     "standard-version": "^9.3.2",
-    "svelte": "3.35.0",
-    "svelte-icons": "^2.1.0",
-    "svelte-infinite-scroll": "^2.0.0",
     "wink-nlp": "^1.10.0",
     "wink-nlp-utils": "^2.0.7",
     "wink-sentiment": "^5.0.2"
