--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "standard-version"
   },
   "standard-version": {
@@ -20,6 +20,7 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.3",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^22.15.32",
     "@types/react": "^18.3.23",
@@ -27,13 +28,17 @@
     "@types/react-infinite-scroll-component": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
+    "autoprefixer": "^10.4.21",
     "builtin-modules": "3.3.0",
     "esbuild": "0.17.3",
+    "esbuild-postcss": "^0.0.4",
     "obsidian": "1.8.7",
+    "postcss": "^8.5.6",
     "rollup": "^4.44.0",
     "rollup-plugin-ignore": "^1.0.10",
     "sanitize-html": "^2.5.2",
     "source-map-js": "^0.6.2",
+    "tailwindcss": "^4.1.10",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
   },
