--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Analyse your Obsidian graph",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "dev": "vite build --watch",
+    "build": "vite build",
     "version": "standard-version"
   },
   "standard-version": {
@@ -15,32 +15,21 @@
   "author": "SkepticMystic",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-replace": "^6.0.2",
-    "@rollup/plugin-typescript": "^12.1.3",
-    "@tailwindcss/postcss": "^4.1.10",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/node": "^22.15.32",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@types/react-infinite-scroll-component": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "autoprefixer": "^10.4.21",
-    "builtin-modules": "3.3.0",
-    "esbuild": "0.17.3",
-    "esbuild-postcss": "^0.0.4",
-    "obsidian": "1.8.7",
-    "postcss": "^8.5.6",
-    "rollup": "^4.44.0",
-    "rollup-plugin-ignore": "^1.0.10",
-    "sanitize-html": "^2.5.2",
-    "source-map-js": "^0.6.2",
-    "tailwindcss": "^4.1.10",
-    "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "@types/node": "^20.11.18",
+		"@types/react": "^19.0.1",
+		"@types/react-dom": "^19.0.2",
+		"@typescript-eslint/eslint-plugin": "5.29.0",
+		"@typescript-eslint/parser": "5.29.0",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"builtin-modules": "3.3.0",
+		"obsidian": "latest",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.16",
+		"tslib": "2.4.0",
+		"typescript": "4.7.4",
+		"vite": "^6.0.3"
+
   },
   "dependencies": {
     "graphology": "^0.23.1",
@@ -48,8 +37,8 @@
     "graphology-metrics": "^1.18.2",
     "lodash.isequal": "^4.5.0",
     "obsidian-community-lib": "2.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "sbd": "^1.0.19",
