--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Analyse your Obsidian graph",
   "main": "main.js",
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "NODE_ENV=development vite build --watch", 
     "build": "vite build",
     "version": "standard-version"
   },
@@ -15,21 +15,22 @@
   "author": "SkepticMystic",
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.18",
-		"@types/react": "^19.0.1",
-		"@types/react-dom": "^19.0.2",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"@vitejs/plugin-react": "^4.3.4",
-		"autoprefixer": "^10.4.20",
-		"builtin-modules": "3.3.0",
-		"obsidian": "latest",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.16",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4",
-		"vite": "^6.0.3"
-
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "builtin-modules": "3.3.0",
+    "fs-extra": "^11.3.0",
+    "obsidian": "latest",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "tslib": "2.4.0",
+    "typescript": "4.7.4",
+    "vite": "^6.0.3"
   },
   "dependencies": {
     "graphology": "^0.23.1",
