--- a/package.json
+++ b/package.json
@@ -15,37 +15,37 @@
   "author": "SkepticMystic",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/node": "^14.17.32",
-    "obsidian": "^0.12.17",
-    "rollup": "^2.58.3",
-    "rollup-plugin-ignore": "^1.0.10",
+    "@rollup/plugin-commonjs": "18.0.0",
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-node-resolve": "11.2.1",
+    "@rollup/plugin-typescript": "8.3.0",
+    "@types/lodash.isequal": "4.5.5",
+    "@types/node": "14.17.32",
+    "obsidian": "0.12.17",
+    "rollup": "2.58.3",
+    "rollup-plugin-ignore": "1.0.10",
     "rollup-plugin-svelte": "7.1.0",
-    "sanitize-html": "^2.5.2",
-    "source-map-js": "^0.6.2",
-    "svelte-check": "^1.6.0",
-    "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "sanitize-html": "2.5.2",
+    "source-map-js": "0.6.2",
+    "svelte-check": "1.6.0",
+    "svelte-preprocess": "4.9.8",
+    "tslib": "2.3.1",
+    "typescript": "4.4.4"
   },
   "dependencies": {
-    "@tsconfig/svelte": "^2.0.1",
-    "graphology": "^0.23.1",
-    "graphology-communities-louvain": "^1.5.3",
-    "graphology-metrics": "^1.18.2",
-    "lodash.isequal": "^4.5.0",
+    "@tsconfig/svelte": "2.0.1",
+    "graphology": "0.23.1",
+    "graphology-communities-louvain": "1.5.3",
+    "graphology-metrics": "1.18.2",
+    "lodash.isequal": "4.5.0",
     "obsidian-community-lib": "1.2.0",
-    "sbd": "^1.0.19",
-    "standard-version": "^9.3.2",
+    "sbd": "1.0.19",
+    "standard-version": "9.3.2",
     "svelte": "3.35.0",
-    "svelte-icons": "^2.1.0",
-    "svelte-infinite-scroll": "^2.0.0",
-    "wink-nlp": "^1.10.0",
-    "wink-nlp-utils": "^2.0.7",
-    "wink-sentiment": "^5.0.2"
+    "svelte-icons": "2.1.0",
+    "svelte-infinite-scroll": "2.0.0",
+    "wink-nlp": "1.10.0",
+    "wink-nlp-utils": "2.0.7",
+    "wink-sentiment": "5.0.2"
   }
 }
